# CamControl

./: settings.gradle
Complete_arm64-v8a/lib/: libexif.la  libjpeg.la  libltdl.la  libusb-1.0.la
Complete_arm64-v8a/lib/libgphoto2/2.5.31.1/: ax203.la  digigr8.la  directory.la  jl2005c.la  kodak_dc240.la  mars.la  ptp2.la  quicktake1x0.la  ricoh_g3.la  sierra.la  sq905.la  tp6801.la
Complete_arm64-v8a/lib/libgphoto2_port/0.12.2/: ptpip.la  usbdiskdirect.la
Complete_arm64-v8a/lib/pkgconfig/: libgphoto2.pc  libgphoto2_port.pc
app/: build.gradle
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/inik/phototest2/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  so_list.h.in
app/src/main/java/com/inik/phototest2/: CameraCaptureListener.kt  CameraFeaturesActivity.kt  CameraNative.kt  JsonObject.kt  LiveViewCallback.kt  MainActivity.kt  MyApp.kt  UsbHandlerActivity.kt  UsbPermissionDialogActivity.kt  UsbPermissionReceiver.kt
app/src/main/java/com/inik/phototest2/model/: GphotoWidget.kt
app/src/main/jniLibs/arm64-v8a/: libgphoto2.la  libgphoto2_port.la  libusb-1.0.la  libxml2.la
app/src/main/jniLibs/arm64-v8a/libgphoto2/: print-camera-list
app/src/main/jniLibs/arm64-v8a/libgphoto2/2.5.31.1/: canon.la  dimagev.la  jl2005a.la  pentax.la  sonix.la  st2205.la  topfield.la
app/src/main/jniLibs/arm64-v8a/libgphoto2_port/0.12.2/: disk.la  usb1.la  usbscsi.la
app/src/main/res/layout/: activity_camera_features.xml  activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: device_filter.xml
app/src/test/java/com/inik/phototest2/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
key/: appkey
